Spy cat v.1.1 (fixed small bugs, correct Swagger annotations
