# docs/swagger.json
@@ -95,6 +95,41 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "description": "Delete a cat from the database by its ID",
+                "summary": "Delete a cat",
+                "parameters": [
+                    {
+                        "description": "Deleted cat data",
+                        "name": "cat",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Cat"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully deleted cat",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid ID format",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    }
+                }
             }
         },
         "/cats/{id}": {
@@ -115,39 +150,6 @@
                         "description": "Cat data",
                         "schema": {
                             "$ref": "#/definitions/models.Cat"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid ID format",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.ErrorResponse"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "Delete a cat from the database by its ID",
-                "summary": "Delete a cat",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Cat ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successfully deleted cat",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.ErrorResponse"
                         }
                     },
                     "400": {
@@ -193,6 +195,41 @@
                     }
                 }
             },
+            "put": {
+                "description": "Update the status of an existing mission.",
+                "summary": "Update mission status",
+                "parameters": [
+                    {
+                        "description": "Updated mission data",
+                        "name": "mission",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Mission"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully updated mission status",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Create a new mission and store it in the database",
                 "summary": "Create a new mission",
@@ -212,43 +249,6 @@
                         "description": "Successfully created mission",
                         "schema": {
                             "$ref": "#/definitions/models.Mission"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid input",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/missions/status": {
-            "put": {
-                "description": "Update the status of an existing mission",
-                "summary": "Update mission status",
-                "parameters": [
-                    {
-                        "description": "Updated mission data",
-                        "name": "mission",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Mission"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successfully updated mission status",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.ErrorResponse"
                         }
                     },
                     "400": {
@@ -341,7 +341,7 @@
             }
         },
         "/missions/{mission_id}/cats/{cat_id}": {
-            "post": {
+            "put": {
                 "description": "Assign a cat to a specific mission",
                 "summary": "Assign a cat to a mission",
                 "parameters": [
@@ -426,28 +426,30 @@
                 }
             }
         },
-        "/targets/{id}": {
-            "delete": {
-                "description": "Delete a target by its ID",
-                "summary": "Delete a target",
+        "/targets/notes": {
+            "put": {
+                "description": "Update notes for a specific target",
+                "summary": "Update target notes",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Target ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
+                        "description": "Target notes data",
+                        "name": "target",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Target"
+                        }
                     }
                 ],
                 "responses": {
-                    "204": {
-                        "description": "Successfully deleted target",
+                    "200": {
+                        "description": "Target notes updated successfully",
                         "schema": {
                             "$ref": "#/definitions/handlers.ErrorResponse"
                         }
                     },
                     "400": {
-                        "description": "Invalid ID format",
+                        "description": "Invalid input",
                         "schema": {
                             "$ref": "#/definitions/handlers.ErrorResponse"
                         }
@@ -461,17 +463,19 @@
                 }
             }
         },
-        "/targets/{id}/status": {
+        "/targets/status": {
             "put": {
                 "description": "Update the status of a specific target",
                 "summary": "Update target status",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Target ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
+                        "description": "Target status data",
+                        "name": "target",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Target"
+                        }
                     }
                 ],
                 "responses": {
@@ -496,37 +500,28 @@
                 }
             }
         },
-        "/targets/{target_id}/notes": {
-            "put": {
-                "description": "Update notes for a specific target",
-                "summary": "Update target notes",
+        "/targets/{id}": {
+            "delete": {
+                "description": "Delete a target by its ID",
+                "summary": "Delete a target",
                 "parameters": [
                     {
                         "type": "integer",
                         "description": "Target ID",
-                        "name": "target_id",
+                        "name": "id",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "description": "Target notes data",
-                        "name": "target",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Target"
-                        }
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "Target notes updated successfully",
+                    "204": {
+                        "description": "Successfully deleted target",
                         "schema": {
                             "$ref": "#/definitions/handlers.ErrorResponse"
                         }
                     },
                     "400": {
-                        "description": "Invalid input",
+                        "description": "Invalid ID format",
                         "schema": {
                             "$ref": "#/definitions/handlers.ErrorResponse"
                         }
